--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
         "vue-tsc": "^2.0.29"
     },
     "engines": {
-        "node": "^28 || ^26 || ^24 || ^22 || ^20 || ^18",
+        "node": "^22",
         "npm": ">= 6.13.4",
         "yarn": ">= 1.21.1"
     }
