--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "dependencies": {
         "@quasar/extras": "^1.16.4",
         "axios": "^1.2.1",
+        "chrome-launcher": "^1.1.2",
         "firebase": "^11.2.0",
+        "lighthouse": "^12.3.0",
         "pinia": "^2.0.11",
         "quasar": "^2.16.0",
+        "ts-node": "^10.9.2",
         "vue": "^3.4.18",
         "vue-i18n": "^9.2.2",
         "vue-router": "^4.0.12",
