Refactor ESLint configuration for improved readability; streamline rules and remove deprecated options, and update package.json to specify module type

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "productName": "Users vue",
     "author": "Marios Tsigkas <mariosh346@gmail.com>",
     "private": true,
+    "type": "module",
     "scripts": {
         "lint": "eslint -c ./eslint.config.js \"./src*/**/*.{ts,js,cjs,mjs,vue}\"",
         "test": "echo \"See package.json => scripts for available tests.\" && exit 0",
