--- a/package.json
+++ b/package.json
@@ -59,7 +59,6 @@
     },
     "engines": {
         "node": "^22",
-        "npm": ">= 6.13.4",
-        "yarn": ">= 1.21.1"
+        "pnpm": ">= 6.13.4"
     }
 }
