--- a/package.json
+++ b/package.json
@@ -24,15 +24,14 @@
         "deploy": "gh-pages -d dist"
     },
     "dependencies": {
-        "@pinia/testing": "^1.0.0",
         "@quasar/extras": "^1.16.4",
         "axios": "^1.2.1",
         "chrome-launcher": "^1.1.2",
         "firebase": "^11.2.0",
         "firebase-admin": "^13.1.0",
         "lighthouse": "^12.3.0",
-        "pinia": "^2.0.11",
-        "quasar": "^2.16.0",
+        "pinia": "^2.3.1",
+        "quasar": "^2.17.7",
         "ts-node": "^10.9.2",
         "vue": "^3.4.18",
         "vue-i18n": "^9.2.2",
@@ -56,9 +55,9 @@
         "globals": "^15.12.0",
         "tsx": "^4.19.3",
         "typescript": "~5.5.3",
-        "vite-plugin-checker": "^0.8.0",
-        "vitest": "^2.0.5",
-        "vue-tsc": "^2.0.29"
+        "vite-plugin-checker": "^0.9.1",
+        "vitest": "^2.1.9",
+        "vue-tsc": "~2.2.2"
     },
     "engines": {
         "node": "^22",
