--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "deploy": "gh-pages -d dist"
     },
     "dependencies": {
+        "@pinia/testing": "^0",
         "@quasar/extras": "^1.16.4",
         "axios": "^1.8.2",
         "chrome-launcher": "^1.1.2",
