--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "@eslint/js": "^9.14.0",
         "@intlify/unplugin-vue-i18n": "^2.0.0",
         "@quasar/app-vite": "^2.0.0",
+        "@quasar/cli": "^2.5.0",
         "@quasar/quasar-app-extension-testing-e2e-cypress": "^6.1.0",
         "@quasar/quasar-app-extension-testing-unit-vitest": "^1.1.0",
         "@types/node": "^20.17.17",
