Update serve script path in package.json and add TypeScript error handling in vitest.config.mts for build to pass

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "test": "echo \"See package.json => scripts for available tests.\" && exit 0",
         "dev": "quasar dev",
         "build": "quasar build",
-        "serve": "quasar serve dist",
+        "serve": "quasar serve dist/spa",
         "postinstall": "quasar prepare",
         "test:e2e": "cross-env NODE_ENV=test start-test \"quasar dev\" http-get://127.0.0.1:8080 \"cypress open --e2e\"",
         "test:e2e:ci": "cross-env NODE_ENV=test start-test \"quasar dev\" http-get://127.0.0.1:8080 \"cypress run --e2e\"",
