--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "test:unit:ci": "vitest run",
         "lighthouse": "node test/lightHouse.js",
         "setAdmin": "npx tsx scripts/setAdmin.ts USER_ID_TO_SET_ADMIN",
-        "deploy": "gh-pages -d dist"
+        "deploy": "firebase deploy"
     },
     "dependencies": {
         "@quasar/extras": "^1.16.4",
@@ -54,6 +54,7 @@
         "eslint": "^9.14.0",
         "eslint-plugin-cypress": "^2.15.1",
         "eslint-plugin-vue": "^9.30.0",
+        "firebase-tools": "^14.1.0",
         "globals": "^15.12.0",
         "tsx": "^4.19.3",
         "typescript": "~5.5.3",
