Add build and deploy workflow for Firebase hosting and update setup script

--- a/firebase.json
+++ b/firebase.json
@@ -1,12 +1,16 @@
 {
   "hosting": {
     "public": "dist/spa",
-    "ignore": [],
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
     "rewrites": [
-    {
+      {
         "source": "**",
         "destination": "/index.html"
-    }
+      }
     ],
     "headers": [
       {
