--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -79,3 +79,19 @@ jobs:
   #     - name: Deploy to GitHub Pages
   #       id: deployment
   #       uses: actions/deploy-pages@v4
+
+  build_and_deploy:
+    runs-on: ubuntu-latest
+    needs: [vitest]
+    steps:
+      - uses: actions/checkout@v4
+      - name: setup environment
+        run: bash scripts/setup.sh
+      - name: build environment
+        run: pnpm run build
+      - uses: FirebaseExtended/action-hosting-deploy@v0
+        with:
+          repoToken: ${{ secrets.GITHUB_TOKEN }}
+          firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_MY_PROJECT_USERS_300618 }}
+          channelId: live
+          projectId: my-project-users-300618
