--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -84,6 +84,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: [vitest]
     steps:
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '22'
       - uses: actions/checkout@v4
       - name: setup environment
         run: bash scripts/setup.sh
