--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,3 @@
 {
-  "extends": "./.quasar/tsconfig.json",
-  "exclude": [
-    "functions/**",
-    "**/*.cy.tsx",
-    "vitest.config.*",
-  ]
+  "extends": "./.quasar/tsconfig.json"
 }
