--- a/package.json
+++ b/package.json
@@ -46,16 +46,19 @@
         "@quasar/cli": "^2.5.0",
         "@quasar/quasar-app-extension-testing-e2e-cypress": "^6.1.0",
         "@quasar/quasar-app-extension-testing-unit-vitest": "^1.1.0",
+        "@tailwindcss/postcss": "^4.1.3",
         "@types/node": "^20.17.17",
         "@vue/eslint-config-typescript": "^14.1.3",
         "@vue/test-utils": "^2.4.4",
-        "autoprefixer": "^10.4.2",
+        "autoprefixer": "^10.4.20",
         "cypress": "^13.6.6",
         "eslint": "^9.14.0",
         "eslint-plugin-cypress": "^2.15.1",
         "eslint-plugin-vue": "^9.30.0",
         "firebase-tools": "^14.1.0",
         "globals": "^15.12.0",
+        "postcss": "^8.5.3",
+        "tailwindcss": "^4.1.3",
         "tsx": "^4.19.3",
         "typescript": "~5.5.3",
         "vite-plugin-checker": "^0.9.1",
