--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,24 +27,24 @@ jobs:
     - name: Run Vitest Tests
       run: pnpm test:unit:ci
 
-  # cypress:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/setup-node@v4
-  #       with:
-  #         node-version: '22'
-  #     - name: checkout repository
-  #       uses: actions/checkout@v4
-  #     - name: setup environment
-  #       run: bash scripts/setup.sh
-  #     - name: Install Cypress Binary
-  #       run: npx cypress install
-  #     - name: Cypress run
-  #       uses: cypress-io/github-action@v6
-  #       with:
-  #         build: pnpm build
-  #         start: pnpm preview --port 5173
-  #         config: 'baseUrl=http://localhost:5173/platform-catApi-react'
+  cypress:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '22'
+      - name: checkout repository
+        uses: actions/checkout@v4
+      - name: setup environment
+        run: bash scripts/setup.sh
+      - name: Install Cypress Binary
+        run: npx cypress install
+      - name: Cypress run
+        uses: cypress-io/github-action@v6
+        # with:
+        #   build: pnpm build
+        #   start: pnpm preview --port 5173
+          # config: 'baseUrl=http://localhost:5173/platform-catApi-react'
 
   # build:
   #   runs-on: ubuntu-latest
