Updates Cypress configuration for deployment
Modifies the deploy workflow to use `pnpm serve` instead of `pnpm preview`.

Ensures the Cypress action runs with the correct build and start commands for improved testing reliability.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,9 +41,9 @@ jobs:
         run: npx cypress install
       - name: Cypress run
         uses: cypress-io/github-action@v6
-        # with:
-        #   build: pnpm build
-        #   start: pnpm preview --port 5173
+        with:
+          build: pnpm build
+          start: pnpm serve
           # config: 'baseUrl=http://localhost:5173/platform-catApi-react'
 
   # build:
