--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,7 +44,7 @@ jobs:
         with:
           build: pnpm build
           start: pnpm serve
-          # config: 'baseUrl=http://localhost:5173/platform-catApi-react'
+          config: 'baseUrl=http://localhost:4000'
 
   # build:
   #   runs-on: ubuntu-latest
