--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,16 +47,16 @@ jobs:
           config: 'baseUrl=http://localhost:4000'
       - name: Upload cypress artifacts
         uses: actions/upload-artifact@v4
-        # add the line below to store screenshots only on failures
         if: failure()
         with:
           name: cypress-screenshots
-          path: test/cypress
+          path: test/cypress/screenshots
           if-no-files-found: ignore # 'warn' or 'error' are also available, defaults to `warn`
       - uses: actions/upload-artifact@v4
+        if: failure()
         with:
           name: cypress-videos
-          path: cypress/videos
+          path: test/cypress/videos
           if-no-files-found: ignore 
 
   # build:
