Improves environment variable handling
Refactors environment variable retrieval to ensure mandatory variables are defined.

Introduces a new function to validate string type and updates Firebase configuration to use the new function for safer access.

Enhances build scripts for easier development workflow.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "dev": "quasar dev",
         "build": "quasar build",
         "serve": "quasar serve dist/spa",
+        "buildNserve": "pnpm build & pnpm serve",
         "postinstall": "quasar prepare",
         "test:e2e": "cross-env NODE_ENV=test start-test \"quasar dev\" http-get://127.0.0.1:9000 \"cypress open --e2e\"",
         "test:e2e:ci": "cross-env NODE_ENV=test start-test \"quasar dev\" http-get://127.0.0.1:9000 \"cypress run --e2e\"",
