--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,9 +42,10 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v6
         with:
-          build: pnpm build
-          start: pnpm serve
-          config: 'baseUrl=http://localhost:4000'
+          dev: pnpm dev
+          # build: pnpm build
+          # start: pnpm serve
+          # config: 'baseUrl=http://localhost:4000'
       - name: Upload cypress artifacts
         uses: actions/upload-artifact@v4
         if: failure()
