--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v6
         with:
-          dev: pnpm dev
+          start: pnpm dev
           # build: pnpm build
           # start: pnpm serve
           # config: 'baseUrl=http://localhost:4000'
