--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,39 +27,39 @@ jobs:
     - name: Run Vitest Tests
       run: pnpm test:unit:ci
 
-  cypress:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/setup-node@v4
-        with:
-          node-version: '22'
-      - name: checkout repository
-        uses: actions/checkout@v4
-      - name: setup environment
-        run: bash scripts/setup.sh
-      - name: Install Cypress Binary
-        run: npx cypress install
-      - name: Cypress run
-        uses: cypress-io/github-action@v6
-        with:
-          start: pnpm dev
-          # build: pnpm build
-          # start: pnpm serve
-          # config: 'baseUrl=http://localhost:4000'
-      - name: Upload cypress screenshots
-        uses: actions/upload-artifact@v4
-        if: failure()
-        with:
-          name: cypress-screenshots
-          path: test/cypress/screenshots
-          if-no-files-found: ignore # 'warn' or 'error' are also available, defaults to `warn`
-      - name: Upload cypress artifacts
-        uses: actions/upload-artifact@v4
-        if: failure()
-        with:
-          name: cypress-videos
-          path: test/cypress/videos
-          if-no-files-found: ignore 
+  # cypress:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/setup-node@v4
+  #       with:
+  #         node-version: '22'
+  #     - name: checkout repository
+  #       uses: actions/checkout@v4
+  #     - name: setup environment
+  #       run: bash scripts/setup.sh
+  #     - name: Install Cypress Binary
+  #       run: npx cypress install
+  #     - name: Cypress run
+  #       uses: cypress-io/github-action@v6
+  #       with:
+  #         start: pnpm dev
+  #         # build: pnpm build
+  #         # start: pnpm serve
+  #         # config: 'baseUrl=http://localhost:4000'
+  #     - name: Upload cypress screenshots
+  #       uses: actions/upload-artifact@v4
+  #       if: failure()
+  #       with:
+  #         name: cypress-screenshots
+  #         path: test/cypress/screenshots
+  #         if-no-files-found: ignore # 'warn' or 'error' are also available, defaults to `warn`
+  #     - name: Upload cypress artifacts
+  #       uses: actions/upload-artifact@v4
+  #       if: failure()
+  #       with:
+  #         name: cypress-videos
+  #         path: test/cypress/videos
+  #         if-no-files-found: ignore
 
   # build:
   #   runs-on: ubuntu-latest
@@ -124,3 +124,35 @@ jobs:
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_MY_PROJECT_USERS_300618 }}
           channelId: live
           projectId: my-project-users-300618
+
+  cypress_after:
+    runs-on: ubuntu-latest
+    needs: [build_and_deploy]
+    steps:
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '22'
+      - name: checkout repository
+        uses: actions/checkout@v4
+      - name: setup environment
+        run: bash scripts/setup.sh
+      - name: Install Cypress Binary
+        run: npx cypress install
+      - name: Cypress run
+        uses: cypress-io/github-action@v6
+        with:
+          config: 'baseUrl=https://my-project-users-300618.web.app/#/'
+      - name: Upload cypress screenshots
+        uses: actions/upload-artifact@v4
+        if: failure()
+        with:
+          name: cypress-screenshots
+          path: test/cypress/screenshots
+          if-no-files-found: ignore
+      - name: Upload cypress artifacts
+        uses: actions/upload-artifact@v4
+        if: failure()
+        with:
+          name: cypress-videos
+          path: test/cypress/videos
+          if-no-files-found: ignore
